--- a/Pokemon series.html
+++ b/Pokemon series.html
@@ -11,7 +11,7 @@
 <li><a href="Latest news.html">Latest News</a></li>
 <li><a href="Pokemon games.html">Pokemon Games</a></li>
 <li><a href="Pokemon series.html">Pokemon Series</a></li>
-<li><a href="PDB.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 </ul>
 <img id="icon" src="Icon.png" />
 
@@ -60,4 +60,5 @@ You can seperately view the detailed information about Ash ketchum's journey and
 <a class="region" href="P.html" >Paldea</a>
 
 </body>
+
 </html>
