--- a/Pokemon games.html
+++ b/Pokemon games.html
@@ -11,7 +11,7 @@
 <li><a href="Latest news.html">Latest News</a></li>
 <li><a href="Pokemon games.html">Pokemon Games</a></li>
 <li><a href="Pokemon series.html">Pokemon Series</a></li>
-<li><a href="PDB.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 </ul>
 <img id="icon" src="Icon.png" />
 
@@ -19,4 +19,5 @@
 </div>
 <h1 class="topic">Pokemon Games</h1>
 </body>
+
 </html>
